syntax = "proto3";

import "entities/interactions.proto";
import "google/protobuf/struct.proto";

message GetParsedInteractionRequest {
  string source_code = 1;
}

message GetParsedInteractionResponse {
  Interaction interaction = 1;
  google.protobuf.Struct program = 2;
  string error = 3;
}

message GetAddressIndexRequest {
  string chain_id = 1;
  string hex_address = 2;
}

message GetAddressIndexResponse {
  uint32 index = 1;
}
